# ocamqping

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  amqping.opam  dune-project  ocamqping.opam
.circleci/: config.yml
.github/workflows/: publish_the_release.yml  test_build.yml
src/lib/: config.ml  dune  operations.ml  pinger.ml  pinger_config.ml
test/: dune
