opam-version: "2.0"
name: "amqping"
version: "~dev"
synopsis: "AMQP server ping tool"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "MIT"
homepage: "https://github.com/argent-smith/amqping"
bug-reports: "https://github.com/argent-smith/amqping/issues"
depends: [
  "ocaml" {build & >= "4.04"}
  "dune" {build & >= "1.1.1"}
  "lwt" {build}
  "lwt_ppx" {build}
  "ppx_jane" {build}
  "cmdliner" {build}
  "amqp-client-lwt" {build}
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "ag_logger" {build & = "0.0.1"}
  "merlin" {post}
  "ocaml-lsp-server" {post}
  "ocamlformat" {post}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: ["dune" "runtest" "-p" name]
dev-repo: "git+https://github.com/argent-smith/amqping"
pin-depends: [
  ["ag_logger.0.0.1" "git+https://github.com/argent-smith/ag_logger.git"]
]
