opam-version: "2.0"
name: "ocamqping"
version: "~dev"
synopsis: "AMQP server ping tool"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "MIT"
homepage: "https://github.com/argent-smith/ocamqping"
bug-reports: "https://github.com/argent-smith/ocamqping/issues"
depends: [
  "ocaml" {build & >= "4.04"}
  "dune" {build & >= "1.1.1"}
  "lwt" {build}
  "base" {build}
  "ppx_jane" {build}
  "cmdliner" {build}
  "amqp-client-lwt" {build}
  "ag_logger" {build}
  "merlin" {post}
  "ocaml-lsp-server" {post}
  "ocamlformat" {post}
  "ocamlformat-rpc" {post}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: ["dune" "runtest" "-p" name]
dev-repo: "git+https://github.com/argent-smith/ocamqping"
pin-depends: [
  ["ag_logger.~dev" "git+https://github.com/argent-smith/ag_logger.git"]
]
